--- a/Amazeriffic/index.html
+++ b/Amazeriffic/index.html
@@ -9,13 +9,21 @@
     <header>
         <h1>Amazeriffic</h1>
         <nav>
-            <a href="#">Sign Up!</a>
-            <a href="#">FAQ</a>
-            <a href="#">Support</a>
+            <a href="#">Sign Up!</a> |
+            <a href="#">FAQ</a> |
+            <a href="#">Support</a> |
         </nav>
     </header>
     <main>
-
+        <h2>Amazeriffic will change your life</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat obcaecati, enim tempora omnis beatae at cum mollitia quisquam, placeat asperiores laborum ex unde natus voluptatum ad numquam saepe aliquam atque?</p>
+        <h3>Here's why you need Amazeriffic</h3>
+        <ul>
+            <li>It fits your lifestyle</li>
+            <li>It's awesome</li>
+            <li>It rocks your world</li>
+        </ul>
+        <img src="lightbulb.png" alt="an image of a lightbulb">
     </main>
     <footer>
 
