--- a/Amazeriffic/index.html
+++ b/Amazeriffic/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Amazeriffic</title>
+    <link rel="stylesheet" href="reset.css" type='text/css'>
+    <link rel="stylesheet" href="style.css" type='text/css'>
 </head>
 
 <body>
