--- a/Amazeriffic/index.html
+++ b/Amazeriffic/index.html
@@ -20,6 +20,7 @@
     </header>
     <main>
         <div class="container">
+            <div class="description"></div>
             <h2>Amazeriffic will change your life</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat obcaecati, enim tempora omnis beatae at cum mollitia quisquam, placeat asperiores laborum ex unde natus voluptatum ad numquam saepe aliquam atque?
             </p>
@@ -29,7 +30,9 @@
                 <li>It's awesome</li>
                 <li>It rocks your world</li>
             </ul>
-            <img src="lightbulb.png" alt="an image of a lightbulb">
+            <div class="image">
+                <img src="lightbulb.png" alt="an image of a lightbulb">
+            </div>
         </div>
     </main>
     <footer>
