added ubuntu font to headers

--- a/Amazeriffic/index.html
+++ b/Amazeriffic/index.html
@@ -5,6 +5,7 @@
     <title>Amazeriffic</title>
     <link rel="stylesheet" href="reset.css" type='text/css'>
     <link rel="stylesheet" href="style.css" type='text/css'>
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
 </head>
 
 <body>
