--- a/Amazeriffic/index.html
+++ b/Amazeriffic/index.html
@@ -21,18 +21,17 @@
     </header>
     <main>
         <div class="container">
-            <div class="description"></div>
-            <h2>Amazeriffic will change your life</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat obcaecati, enim tempora omnis beatae at cum mollitia quisquam, placeat asperiores laborum ex unde natus voluptatum ad numquam saepe aliquam atque?
-            </p>
-            <h3>Here's why you need Amazeriffic</h3>
-            <ul>
-                <li>It fits your lifestyle</li>
-                <li>It's awesome</li>
-                <li>It rocks your world</li>
-            </ul>
-            <div class="image">
-                <img src="lightbulb.png" alt="an image of a lightbulb">
+            <div class="tabs">
+                <a href="#"><span class="active">Newest</span></a>
+                <a href="#"><span>Oldest</span></a>
+                <a href="#"><span>Add</span></a>
+            </div>
+            <div class="content">
+                <ul>
+                    <li>Get Groceries</li>
+                    <li>Grab some milk</li>
+                    <li>Go do some pullups</li>
+                </ul>
             </div>
         </div>
     </main>
@@ -58,6 +57,9 @@
             </div>
         </div>
     </footer>
+    <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+    <script src="javascript/app.js"></script>
+
 </body>
 
 </html>
